infra/manifests/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  annotations:
    moonrepo.dev/skip-local: "true"
  labels:
    app: frigate
