infra/manifests/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
  annotations:
    moonrepo.dev/skip-local: "true"
  labels:
    app: frigate
spec:
  type: ClusterIP
  selector:
    app: frigate
  ports:
    - name: web
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: rtsp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: webrtc
      port: 8555
      targetPort: 8555
      protocol: TCP
    - name: go2rtc-api
      port: 1984
      targetPort: 1984
      protocol: TCP
