infra/manifests/frigate/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: frigate
  annotations:
    moonrepo.dev/skip-local: "true"
spec:
  hostnames:
    - "frigate.brandwhisper.cloud"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frigate
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: "/"
